--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,11 +23,11 @@ jobs:
       run: npm run build
 
     - name: Deploy to FTP
-      uses: SamKirkland/FTP-Deploy-Action@5.0.0
+      uses: milanowicz/ftp-deploy@v1.7.0
       with:
-        server: ${{ secrets.FTP_HOST }}
-        username: ${{ secrets.FTP_USERNAME }}
+        host: ${{ secrets.FTP_HOST }}
+        user: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-        local-dir: ./dist/
-        server-dir: /www/domains/jakubminka.cz/
-        dangerous-clean-slate: false
+        local_dir: ./dist/
+        remote_dir: /www/domains/jakubminka.cz/
+
