--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,12 @@ jobs:
     - name: Install LFTP
       run: sudo apt-get update && sudo apt-get install -y lftp
 
+    - name: Verify FTP secrets
+      run: |
+        if [ -z "${{ secrets.FTP_HOST }}" ]; then echo "Missing FTP_HOST"; exit 1; fi
+        if [ -z "${{ secrets.FTP_USERNAME }}" ]; then echo "Missing FTP_USERNAME"; exit 1; fi
+        if [ -z "${{ secrets.FTP_PASSWORD }}" ]; then echo "Missing FTP_PASSWORD"; exit 1; fi
+
     - name: Deploy to FTP
       run: |
         lftp -u ${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }} ${{ secrets.FTP_HOST }} << EOF
