--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Deploy to FTP
       run: |
         lftp -u ${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }} ${{ secrets.FTP_HOST }} << EOF
-        mirror -R --delete ./dist/ /www/domains/jakubminka.cz/
+        mirror -R --delete ./dist/ /www/jakubminka.cz/
         quit
         EOF
 
