--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,10 +34,7 @@ jobs:
     - name: Deploy to FTP
       run: |
         lftp -u ${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }} ${{ secrets.FTP_HOST }} << EOF
-        mirror -R --delete ./dist/ /www/domains/jakubminka.cz/
-        chmod 644 /www/domains/jakubminka.cz/index.html
-        chmod 644 /www/domains/jakubminka.cz/.htaccess
-        chmod 755 /www/domains/jakubminka.cz/assets
+        mirror -R --delete ./dist/ /
         quit
         EOF
 
