--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Build
       run: npm run build
 
+    - name: Copy .htaccess to dist
+      run: cp .htaccess dist/.htaccess
+
     - name: Install LFTP
       run: sudo apt-get update && sudo apt-get install -y lftp
 
