--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,7 @@
 # Redirect www.jakubminka.cz to www.minka-weddings.cz
 <IfModule mod_rewrite.c>
   RewriteEngine On
+  RewriteBase /
   
   # Redirect www.jakubminka.cz to www.minka-weddings.cz
   RewriteCond %{HTTP_HOST} ^www\.jakubminka\.cz$ [NC]
