--- a/.htaccess
+++ b/.htaccess
@@ -1,30 +1,13 @@
-# Redirect www.jakubminka.cz to www.minka-weddings.cz
 <IfModule mod_rewrite.c>
   RewriteEngine On
   RewriteBase /
-  
-  # Redirect www.jakubminka.cz to www.minka-weddings.cz
-  RewriteCond %{HTTP_HOST} ^www\.jakubminka\.cz$ [NC]
+
+  # Redirect jakubminka.cz and www.jakubminka.cz to www.minka-weddings.cz
+  RewriteCond %{HTTP_HOST} ^(www\.)?jakubminka\.cz$ [NC]
   RewriteRule ^(.*)$ https://www.minka-weddings.cz/$1 [R=301,L]
-  
-  # Redirect jakubminka.cz (bez www) to www.minka-weddings.cz
-  RewriteCond %{HTTP_HOST} ^jakubminka\.cz$ [NC]
-  RewriteRule ^(.*)$ https://www.minka-weddings.cz/$1 [R=301,L]
-  
+
   # SPA routing - pokud soubor/složka neexistuje, serve index.html
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteRule ^ index.html [QSA,L]
-</IfModule>
-
-# Cache control pro assets
-<FilesMatch "\\.(js|css|png|jpg|jpeg|gif|ico|webm|mp4|woff|woff2)$">
-  <IfModule mod_headers.c>
-    Header set Cache-Control "max-age=31536000, public"
-  </IfModule>
-</FilesMatch>
-
-# Disable directory listing
-<IfModule mod_autoindex.c>
-  Options -Indexes
 </IfModule>
