--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,10 @@
-<IfModule mod_rewrite.c>
-  RewriteEngine On
+RewriteEngine On
 
-  # SPA routing - pokud soubor/složka neexistuje, serve index.html
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule ^ index.html [QSA,L]
-</IfModule>
+# SPA routing - pokud soubor/složka neexistuje, serve index.html
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI} !^index\.html$
+RewriteRule ^ index.html [QSA,L]
+
+# DirectoryIndex fallback
+DirectoryIndex index.html
